fix z-index

--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -11,7 +11,7 @@
   justify-content: center;
 
   background-color: rgba($color: #000000, $alpha: 0.2);
-  z-index: 10;
+  z-index: 2;
 }
 
 .Modal-content {
